# llm-test

./: .gitignore  CLAUDE.md  README-cn.md  README.md  pyproject.toml
alembic/: env.py
config/: default.yaml  endpoints.yaml.example  presets.yaml.example
src/llm_test/: __init__.py  cache.py  cli.py  client.py  config.py  report.py  runner.py  scoring.py
src/llm_test/probes/: __init__.py  baseline.py  identity.py  knowledge.py  latency.py  logprobs.py  metadata.py  needle.py  reasoning.py  style.py  sysprompt.py
src/llm_test/web/: app.py  auth.py  database.py  models.py  schemas.py  templates_conf.py
src/llm_test/web/routes/: api.py  auth.py  pages.py
src/llm_test/web/static/css/: style.css
src/llm_test/web/static/js/: app.js
src/llm_test/web/templates/: 404.html  base.html  index.html  login.html  methodology.html  register.html  report.html
