[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-test"
version = "0.1.0"
description = "Model verification toolkit - detect API proxy downgrades"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.42",
    "httpx>=0.27",
    "click>=8.1",
    "rich>=13.0",
    "pyyaml>=6.0",
    "pydantic>=2.5",
    # Web
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    # Database
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    # Auth
    "bcrypt>=4.2",
    "python-jose[cryptography]>=3.3",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "aiosqlite>=0.20"]

[project.scripts]
llm-test = "llm_test.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
